Fix modal input card and image size cropping

--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,8 @@
     flex-direction: column;
     justify-content: center;
     padding: 0;
+    max-width: 800px;
+    width: 100%;
 }
 
 .form__content {
@@ -57,8 +59,7 @@
     align-items: center;
     padding: 10px 0;
     gap: 10px;
-    width: 100vw;
-    max-width: 300px;
+    width: 100%;
 }
 
 .form__actions {
@@ -95,7 +96,7 @@
 .image-input__image-cropped {
     object-fit: contain;
     width: 100%;
-    max-height: 300px !important;
+    max-height: 400px !important;
 }
 
 .card__container {
@@ -106,7 +107,7 @@
 }
 
 .card__form {
-    max-height: 500px;
+    max-height: 650px;
     overflow-y: auto;
     overflow-x: hidden;
 }
